Fixed error of font spilling over box
+ font size in game-cell is now set by cellWidth in fixSquares()

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -113,7 +113,6 @@ $grey-out-game-color: $charcoal-grey-color;
 .game-cell {
   align-items: center;
   display: flex;
-  font-size: 25vmin;
   justify-content: center;
 }
 
